--- a/action.css
+++ b/action.css
@@ -448,7 +448,6 @@ a.btn:hover {
   margin-bottom: 45px;
   margin-left: 110px;
   margin-right: 110px;
-  height: 450px;
 }
 
 
@@ -465,8 +464,10 @@ a.btn:hover {
   margin-bottom: 60px;
 }
 
-.skills-section .top-skills .part {
-  margin-bottom: 45px;
+.skills-section .top-skills .item-inner{
+  width: 33%;
+  float: left;
+  text-align: center;
 }
 
 .skills-section .skill-name {
@@ -480,31 +481,6 @@ a.btn:hover {
 
 .skills-section .desc {
   color: #666;
-}
-
-.skills-section .col-1 {
-  position: absolute;
-  left: 300px;
-  width: 400px;
-  height: 120px;
-}
-
-.skills-section .col-2 {
-  position: absolute;
-  left: 650px;
-  width: 400px;
-  height: 120px;
-}
-
-.skills-section .col-3 {
-  position: absolute;
-  left: 950px;
-  width: 300px;
-  height: 120px;
-}
-
-.other-skills .subtitle {
-  padding-top: 180px;  
 }
 
 .other-skills .misc-skills {
