--- a/action.css
+++ b/action.css
@@ -175,15 +175,16 @@ a.btn:hover {
 
 .contact-info ul {
   margin-bottom: 0;
+  width: 800px;
+  margin: 0 auto;
 }
 
 .contact-info li {
-  margin-right: 30px;
   color: rgba(255, 255, 255, 0.8);
   list-style-type: none;
   float: left;
   text-align: center;
-  width: 30%;
+  width: 33%;
  }
 
 .contact-info li a {
